Fixed Jumbotron Button background problem and also responsiveness of social media icons on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -348,41 +348,52 @@ header .light-logo {
         border-radius: 5px;
         margin-left: 10px;
     }
-    
     .btn-large.btn-jumbo {
-        background-color: #32c4e9;
-        color: #fff;
-        padding: 12px 15px;
-        text-align: center;
-        cursor: pointer;
-        box-shadow: inset 0 0 0 0 #000;
-        -webkit-transition: all ease 0.8s;
-        -moz-transition: all ease 0.8s;
-        transition: all ease 0.8s;
-    }
+    background-color: #32c4e9;
+    color: #fff;
+    padding: 10px 15px;
+    border:2px solid #32c4e9;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 #000;
+    -moz-box-shadow: inset 0 0 0 0 #000;
+    -webkit-box-shadow: inset 0 0 0 0 #000;;
+    -webkit-transition: all ease 0.8s;
+    -moz-transition: all ease 0.8s;
+    transition: all ease 0.8s;
+}
+
+.btn-large.btn-jumbo:hover {
+    box-shadow: inset 200px 0 0 0 #fff;
+    -moz-box-shadow: inset 200px 0 0 0 #fff;
+    -webkit-box-shadow: inset 200px 0 0 0 #fff;
+    color: #32c4e9;
+    background-color:#fff;
+    border-color:#fff;
     
-    .btn-large.btn-jumbo:hover {
-        box-shadow: inset 200px 0 0 0 #fff;
-        color: #32c4e9;
-        outline: none;
-    }
-    
-    #jumbo_btn2 {
-        background-color: rgba(255, 255, 255, 0);
-        color: #fff;
-        padding: 10px 15px;
-        border: 2px solid #fff;
-        cursor: pointer;
-        box-shadow: inset 0 0 0 0 #000;
-        -webkit-transition: all ease 0.5s;
-        -moz-transition: all ease 0.5s;
-        transition: all ease 0.5s;
-    }
-    
-    #jumbo_btn2:hover {
-        box-shadow: inset 0 100px 0 0 #fff;
-        color: #32c4e9;
-    }
+}
+
+#jumbo_btn2 {
+    background-color: rgba(255, 255, 255, 0);
+    color: #fff;
+    padding: 10px 15px;
+    border: 2px solid #fff;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 #fff;
+    -webkit-box-shadow: inset 0 0 0 0 #fff;
+    -moz-box-shadow:inset 0 0 0 0 #fff;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+}
+
+#jumbo_btn2:hover {
+    box-shadow: inset 0 100px 0 0 #fff;
+    -webkit-box-shadow: inset 0 100px 0 0 #fff;
+    -moz-box-shadow: inset 0 100px 0 0 #fff;
+    color: #32c4e9;
+    background-color:#fff;
+}
 
 
 /* End Jumbotron */
@@ -2001,6 +2012,19 @@ header .light-logo {
             padding: 8px 18px;
             font-size: 14px;
         }
+
+        .jumbotron-content ul {
+    margin-top: 22px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+}
+
+        .jumbotron-content ul li a {
+            width: 35px;
+            height: 35px;
+            line-height: 35px;
+        }
+
         .btn-large.btn-jumbo {
             margin-left: 0px;
         }
@@ -2145,16 +2169,10 @@ header .light-logo {
             margin-top: 30px;
         }
         .portfolio-btn #btn_2 {
-            padding: 4px 8px;
-            font-size: 10px;
+            padding: 8px 12px;
+            font-size: 14px;
         }
-        .portfolio-btn #btn_3 {
-            padding: 4px 8px;
-            font-size: 10px;
-        }
-        .portfolio-btn #btn_3 .fa-arrow-right {
-            font-size: 12px;
-        }
+       
         #portfolio .jumbotron-content h2 {
             font-size: 30px;
         }
